# COREY_Transformer

./: .gitignore  .gitleaks.toml  .gitmodules  Dockerfile  README.md  fix_policy_corey_and_quamba.sh  launch_remote_policy_corey.sh  monitor_and_complete.sh  pyproject.toml  requirements.txt  verify_and_complete_tasks.sh  verify_quamba_final.sh
agents/.claude/: launch.json  settings.json
docs/: TASK_EXECUTION_SUMMARY_2026_04_14.md  draft_notes.md  experiment_data.md  progress.md  reviewer_response.md  revision_roadmap.md  revision_suggestions.tex  sync_mamba370m_from_hf.sh
docs/review_reports/: stage9_da_review.md  stage9_eic_review.md  stage9_field_analyst.md  stage9_r1_methodology.md  stage9_r2_domain.md  stage9_r3_perspective.md  stage9_revision_roadmap.md
docs/tmp/: COMPLETION_HANDOFF.md  COMPLETION_VERIFIED.txt  EXECUTION_STATUS_2026_04_14.md  FINAL_COMPLETION_STATUS.md  FINAL_TASK_DELIVERY.md  TASK50_51_STATUS_UPDATE.md  TASK_COMPLETION_SUMMARY_FINAL.md  execution_log_stage10_2026_04_15.md  policy_corey_quamba_progress_2026_04_14.md  progress_session_2026_04_15.md  quamba_experiments_nextPhase.md  revision_suggestions_independent_review_2026_04_15.tex  revision_suggestions_old_backup_2026_04_15.tex  task_completion_log_20260414_011705.txt  wsl2_cuda128_migration.md
paper/: main.tex  refs.bib
paper/figures/: generate_figures.py
src/: __init__.py  corey_selective_scan_dispatch.py  entropy.py  fused_ops.py  hadamard.py  requirements.txt  run_all.py  usage.md
src/algorithms/: __init__.py  entropy.py  fusion.py  hadamard.py  (+4 more)
tests/: test_adama.py
(+166 files in other folders)
