[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "corey-transformer"
version = "0.1.0"
requires-python = ">=3.11"
description = "Entropy-Regularized Fusion Optimization for Efficient Mamba-based Transformer Inference"
dependencies = [
    "numpy",
    "triton",
    "einops",
    "transformers",
    "datasets",
    "sentencepiece",
    "accelerate",
    "psutil",
    "huggingface_hub",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
